# jimo

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
docs_doxygen/: Doxyfile.in  actionsandactionhandling.md  crossthreadcommunications.md  delegates.md  events.md  mainpage.md  timer.md  timers.md  timingcodeexecution.md
examples/: CMakeLists.txt
examples/ActionHandler/: CMakeLists.txt
examples/ActionHandler/ActionHandler1/: ActionHandler1.cpp  CMakeLists.txt  README.md
examples/ActionHandler/ActionHandler2/: ActionHandler2.cpp  CMakeLists.txt  README.md
examples/Delegate/: CMakeLists.txt  Delegate.cpp  README.md
examples/Delegate/Delegate1/: CMakeLists.txt  Delegate1.cpp  README.md
examples/Delegate/Delegate2/: CMakeLists.txt  Delegate2.cpp  README.md
examples/Delegate/Delegate3/: CMakeLists.txt  Delegate3.cpp  README.md
examples/Event/: CMakeLists.txt
examples/Event/Event1/: CMakeLists.txt  Event1.cpp  README.md
examples/Event/Event2/: CMakeLists.txt  Event2.cpp  README.md
examples/MultipleActionDelegates/: CMakeLists.txt
examples/MultipleActionDelegates/MultipleActionDelegates1/: CMakeLists.txt  MultipleActionDelegates1.cpp  README.md
examples/StopWatch/: CMakeLists.txt  README.md  StopWatch.cpp
examples/Timer/: CMakeLists.txt
examples/Timer/OnceTimer/: CMakeLists.txt  OnceTimer.cpp  README.md
examples/Timer/Timer1/: CMakeLists.txt  README.md  Timer1.cpp
src/: CMakeLists.txt
src/jimo/: CMakeLists.txt
src/jimo/include/: Action.h  ActionHandler.h  Delegate.h  Equatable.h  Event.h  EventArgs.h  EventHandler.h  MulitpleActionDelegates.h  MultipleActionDelegates.h  Object.h  StopWatch.h  StopWatchException.h  ThreadedActionHandler.h  Timer.h  TimerEventArgs.h  TimerException.h
src/jimo/src/: StopWatch.cpp
tests/: ActionHandlerTests.cpp  ActionTests.cpp  CMakeLists.txt  DelegateTests.cpp  EventArgsTests.cpp  EventTests.cpp  MultipleActionDelegatesTests.cpp  ObjectTests.cpp  StopWatchExceptionTests.cpp  StopWatchTests.cpp  ThreadedActionHandlerTests.cpp  TimerEventArgsTests.cpp  TimerTests.cpp  jimoTest.cpp
