include(FetchContent)

FetchContent_Declare(
  googletest
  GIT_REPOSITORY https://github.com/google/googletest.git
  GIT_TAG        release-1.12.1
)
FetchContent_MakeAvailable(googletest)
add_library(GTest::GTest INTERFACE IMPORTED)
target_link_libraries(GTest::GTest INTERFACE gtest_main)

add_executable(jimoTest StopWatchTests.cpp)

target_link_libraries(jimoTest
 PRIVATE
  GTest::GTest
  jimo)

add_test(jimoTests jimoTest)